tests/syntax_error/too_many_opening_parens.jou
def foo() -> void:
    bar((1)  # Error: expected a ')', got end of line
